Fix broken endpoint for resume

--- a/index.html
+++ b/index.html
@@ -27,16 +27,16 @@
         <div class="header" id="top">
             <!-- Navigation -->
             <div class="menu-buttons">
-                <a class="btn btn-menu btn-lg js-scroll-trigger" href="/#top">
+                <a class="btn btn-menu btn-lg js-scroll-trigger" href="#top">
                     Home
                 </a>
-                <a class="btn btn-menu btn-lg js-scroll-trigger" href="/#resume">
+                <a class="btn btn-menu btn-lg js-scroll-trigger" href="#resume">
                    Resume
                 </a>
-                <a class="btn btn-menu btn-lg js-scroll-trigger" href="/#about">
+                <a class="btn btn-menu btn-lg js-scroll-trigger" href="#about">
                     About
                 </a>
-                <a class="btn btn-menu btn-lg js-scroll-trigger" href="/#contact">
+                <a class="btn btn-menu btn-lg js-scroll-trigger" href="#contact">
                     Contact
                 </a>
             </div>
@@ -48,7 +48,7 @@
             </div>
 
             <div class="text-vertical-center">
-                <a href="/#resume" class="btn btn-dark btn-lg js-scroll-trigger">
+                <a href="#resume" class="btn btn-dark btn-lg js-scroll-trigger">
                     <i class="fa fa-chevron-down"></i>
                 </a>
             </div>
