--- a/index.html
+++ b/index.html
@@ -4,27 +4,33 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
         <meta name="description" content="">
         <meta name="author" content="">
         <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Montserrat|Roboto" rel="stylesheet">
-        <link rel="icon" href="../../favicon.ico">
+        <link rel="icon" href="static/favicon.ico">
 
         <title>Alex Rushing - Website</title>
 
-        <!-- Bootstrap core CSS -->
+        <!-- Bootstrap -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
-        <!-- Font-Awesome core CSS -->
+        <!-- Font-Awesome -->
         <link href="static/css/font-awesome.min.css" rel="stylesheet">
 
-        <!-- Custom styles for this template -->
+        <!-- Custom -->
         <link href="static/css/base.css" rel="stylesheet">
     </head>
     <body>
 
         <!-- Header -->
         <div class="header" id="top">
+            <!-- Plane -->
+            <div class="plane">
+                <div class="text-vertical-center">
+                    <h1>Alex Rushing</h1>
+                </div>
+            </div>
+
             <!-- Navigation -->
             <div class="menu-buttons">
                 <a class="btn btn-menu btn-lg js-scroll-trigger" href="#top">
@@ -55,18 +61,10 @@
         </div>
 
         <div id="resume">
-            <!-- Plane -->
-            <div class="plane sticky">
-                <div class="text-vertical-center">
-                    <h1>Alex Rushing</h1>
-                </div>
-            </div>
-
             <!-- Resume -->
             <div class="container ">
 
-                <br>
-                <br>
+                <div class="filler"></div>
 
                 <div class="jumbotron">
                     <div class="row">
@@ -118,6 +116,11 @@
                 </div>
             </div>
         </div>
+
+        <!-- Javascript -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+        <script src="static/js/jquery.easing.min.js"></script>
+        <script src="static/js/custom.js"></script>
     </body>
 </html>
 
