--- a/index.html
+++ b/index.html
@@ -36,11 +36,14 @@
                 <a class="btn btn-menu btn-lg js-scroll-trigger" href="#top">
                     Home
                 </a>
-                <a class="btn btn-menu btn-lg js-scroll-trigger" href="#resume">
-                   Resume
+                <a class="btn btn-menu btn-lg js-scroll-trigger" href="#aboutme">
+                    About Me
                 </a>
-                <a class="btn btn-menu btn-lg js-scroll-trigger" href="#about">
-                    About
+                <a class="btn btn-menu btn-lg js-scroll-trigger" href="#projects">
+                    Projects
+                </a>
+                <a class="btn btn-menu btn-lg js-scroll-trigger" href="#resume">
+                    Resume
                 </a>
                 <a class="btn btn-menu btn-lg js-scroll-trigger" href="#contact">
                     Contact
@@ -54,14 +57,14 @@
             </div>
 
             <div class="text-vertical-center">
-                <a href="#resume" class="btn btn-dark btn-lg js-scroll-trigger">
+                <a href="#aboutme" class="btn btn-dark btn-lg js-scroll-trigger">
                     <i class="fa fa-chevron-down"></i>
                 </a>
             </div>
         </div>
 
-        <div id="resume">
-            <!-- Resume -->
+        <div id="aboutme">
+            <!-- About Me -->
             <div class="container ">
 
                 <div class="filler"></div>
@@ -105,6 +108,119 @@
                 </div>
             </div>
         </div>
+
+        <div id="projects">
+            <!-- Projects -->
+            <div class="container ">
+
+                <div class="filler"></div>
+
+                <div class="jumbotron">
+                    <div class="row">
+                        <div class="col-xs-6">
+                            <h1>College Inspector
+                                <p>
+                                    <a href="https://rushing3.github.io/college_inspector/">
+                                        https://rushing3.github.io/college_inspector/
+                                    </a>
+                                </p>
+                            </h1>
+                            <p>
+                            Hey there, my name is Alex and welcome to my site.
+                            I'm currently a Computer Science student at Georgia Tech, and I will be
+                            interning as a Software Development Engineer for Amazon this Summer in Seattle.
+                            In my free time I enjoy attending hackathons, snowboarding,
+                            hiking, travelling to new places, and eating good food.
+                            </p>
+                        </div>
+                        <div class="col-xs-6">
+                            <a href="https://github.com/rushing3" class="thumbnail">
+                                <img src="static/git.png" width="256">
+                            </a>
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="row">
+                        <div class="col-xs-6">
+                            <h1>Joint Travel
+                                <p>
+                                    <a href="https://joint-travel.herokuapp.com/">
+                                        https://joint-travel.herokuapp.com/
+                                    </a>
+                                </p>
+                            </h1>
+                            <p>
+                            Hey there, my name is Alex and welcome to my site.
+                            I'm currently a Computer Science student at Georgia Tech, and I will be
+                            interning as a Software Development Engineer for Amazon this Summer in Seattle.
+                            In my free time I enjoy attending hackathons, snowboarding,
+                            hiking, travelling to new places, and eating good food.
+                            </p>
+                        </div>
+                        <div class="col-xs-6">
+                            <a href="https://github.com/rushing3" class="thumbnail">
+                                <img src="static/git.png" width="256">
+                            </a>
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="row">
+                        <h1>Joint Travel</h1>
+                    </div>
+                    <h3>Check it out
+                        <a href="https://joint-travel.herokuapp.com/">
+                            here
+                        </a>
+                    </h3>
+                    <hr>
+                    <p>
+                    Hey there, my name is Alex and welcome to my site.
+                    I'm currently a Computer Science student at Georgia Tech, and I will be
+                    interning as a Software Development Engineer for Amazon this Summer in Seattle.
+                    In my free time I enjoy attending hackathons, snowboarding,
+                    hiking, travelling to new places, and eating good food.
+                    </p>
+                </div>
+            </div>
+        </div>
+
+        <div id="resume">
+            <!-- Resume -->
+            <div class="container ">
+
+                <div class="filler"></div>
+
+                <div class="jumbotron">
+                    <div class="row">
+                        <div class="col-xs-12">
+                            <h1>Education</h1>
+                            <p>
+                            Hey there, my name is Alex and welcome to my site.
+                            </p>
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="row">
+                        <div class="col-xs-12">
+                            <h1>Experience</h1>
+                            <p>
+                            Hey there, my name is Alex and welcome to my site.
+                            </p>
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="row">
+                        <div class="col-xs-12">
+                            <h1>Skills</h1>
+                            <p>
+                            Hey there, my name is Alex and welcome to my site.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
 
         <!-- Footer -->
         <div class="container">
