Add screenshots projects

--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@
                             </p>
                         </div>
                         <div class="col-xs-6">
-                            <a href="https://github.com/rushing3" class="thumbnail">
-                                <img src="static/git.png" width="256">
+                            <a href="https://rushing3.github.io/college_inspector/" class="thumbnail">
+                                <img src="static/college_inspector.png" height="256">
                             </a>
                         </div>
                     </div>
@@ -158,28 +158,11 @@
                             </p>
                         </div>
                         <div class="col-xs-6">
-                            <a href="https://github.com/rushing3" class="thumbnail">
-                                <img src="static/git.png" width="256">
+                            <a href="https://joint-travel.herokuapp.com/" class="thumbnail">
+                                <img src="static/joint.png" height="256">
                             </a>
                         </div>
                     </div>
-                    <hr>
-                    <div class="row">
-                        <h1>Joint Travel</h1>
-                    </div>
-                    <h3>Check it out
-                        <a href="https://joint-travel.herokuapp.com/">
-                            here
-                        </a>
-                    </h3>
-                    <hr>
-                    <p>
-                    Hey there, my name is Alex and welcome to my site.
-                    I'm currently a Computer Science student at Georgia Tech, and I will be
-                    interning as a Software Development Engineer for Amazon this Summer in Seattle.
-                    In my free time I enjoy attending hackathons, snowboarding,
-                    hiking, travelling to new places, and eating good food.
-                    </p>
                 </div>
             </div>
         </div>
