--- a/index.html
+++ b/index.html
@@ -100,10 +100,15 @@
                     <hr>
                     <p>
                     Hey there, my name is Alex and welcome to my site.
-                    I'm currently a Computer Science student at Georgia Tech, and I will be
-                    interning as a Software Development Engineer for Amazon this Summer in Seattle.
-                    In my free time I enjoy attending hackathons, snowboarding,
-                    hiking, travelling to new places, and eating good food.
+                    I've recently graduated from Georgia Tech and will be
+                    starting at Amazon full-time as a Software Development
+                    Engineer after travelling for a couple months. Having grown
+                    up travelling around and in multiple continents, I have a
+                    nose for experiencing new places, cultures, and naturally
+                    food. I like to think this background gives me some unique
+                    insight and perspectives, but I digress. Whenever I can I
+                    love being outside, especially hiking and snowboarding, so
+                    Washington is a great place to be.
                     </p>
                 </div>
             </div>
@@ -126,11 +131,15 @@
                                 </p>
                             </h1>
                             <p>
-                            Hey there, my name is Alex and welcome to my site.
-                            I'm currently a Computer Science student at Georgia Tech, and I will be
-                            interning as a Software Development Engineer for Amazon this Summer in Seattle.
-                            In my free time I enjoy attending hackathons, snowboarding,
-                            hiking, travelling to new places, and eating good food.
+                            College Inspector is a D3.js project that allows users
+                            to examine trends in American Colleges and Univiersities,
+                            particularly in terms of financial obligations and returns.
+                            On the flip-side, it also allows users to dig deeper into
+                            individual colleges while allowing more detailed comparison
+                            to different colleges. It's great from the perspective of
+                            prospective college students/transfers and leadership within
+                            Universities trying to gain insight on theirselves, their peers,
+                            and academia on the whole.
                             </p>
                         </div>
                         <div class="col-xs-6">
@@ -150,11 +159,16 @@
                                 </p>
                             </h1>
                             <p>
-                            Hey there, my name is Alex and welcome to my site.
-                            I'm currently a Computer Science student at Georgia Tech, and I will be
-                            interning as a Software Development Engineer for Amazon this Summer in Seattle.
-                            In my free time I enjoy attending hackathons, snowboarding,
-                            hiking, travelling to new places, and eating good food.
+                            Joint is a multi-origin, single destination searches for their users.
+                            It targets people who are spread out geographically but would like to meet together at one
+                            central location, such as long-distance couple or friends living in very distant cities.
+                            Joint performs a customized search for potential destinations that travelers could
+                            visit based on parameters such as lowest total cost or distance for all travellers involved.
+                            It's built using Python and Flask, while making use of
+                            <a href="https://www.kiwi.com/us/">
+                                Kiwi's
+                            </a>
+                            fantastic flight API.
                             </p>
                         </div>
                         <div class="col-xs-6">
