--- a/index.html
+++ b/index.html
@@ -191,27 +191,63 @@
                     <div class="row">
                         <div class="col-xs-12">
                             <h1>Education</h1>
-                            <p>
-                            Hey there, my name is Alex and welcome to my site.
-                            </p>
+
+                            <ul class="fa-ul">
+
+                                <li><i class="fa fa-caret-right"></i>
+                                <b>Georgia Institute of Technology</b>
+                                - Bachelors in Computer Science w/ Highest Honors, 2017
+                                </li>
+                                <li><i class="fa fa-caret-right"></i>
+                                <b>National University of Singapore</b>
+                                - Exchange Student, 2015
+                                </li>
+
+                            </ul>
                         </div>
                     </div>
                     <hr>
                     <div class="row">
                         <div class="col-xs-12">
                             <h1>Experience</h1>
-                            <p>
-                            Hey there, my name is Alex and welcome to my site.
-                            </p>
-                        </div>
-                    </div>
-                    <hr>
-                    <div class="row">
-                        <div class="col-xs-12">
-                            <h1>Skills</h1>
-                            <p>
-                            Hey there, my name is Alex and welcome to my site.
-                            </p>
+
+                            <ul class="fa-ul">
+                                <li><i class="fa fa-caret-right"></i>
+                                    <b>Software Development Engineer Intern - Amazon</b> - Seattle, WA - Summer 2017
+
+                                    <ul class="fa-ul" style="display: none;">
+                                        <li><i class="fa fa-angle-right"></i>
+                                            Designed and implemented a full-stack search
+                                            tool for internal access controls used across
+                                            all Amazon departments
+                                        </li>
+                                        <li><i class="fa fa-angle-right"></i>
+                                            Created the frontend for the search portal
+                                            as part of a Ruby-on-Rails site using ReactJS,
+                                            Bootstrap and custom CSS for styling
+                                        </li>
+                                        <li><i class="fa fa-angle-right"></i>
+                                            Defined and exposed RESTful Java APIs
+                                            for the search tool and CRUD operations
+                                            for associating keywords to certain resources
+                                        </li>
+                                        <li><i class="fa fa-angle-right"></i>
+                                            Built DynamoDB Tables and Indexes to allow search functionality
+                                        </li>
+                                    </ul>
+
+                                    <br>
+                                </li>
+                                <li><i class="fa fa-caret-right"></i>
+                                    <b>Software Co-op - GTRI</b> - Atlanta, GA - Summer 2015-Spring 2017
+                                </li>
+                                <li><i class="fa fa-caret-right"></i>
+                                    <b>Research Assistant - Georgia Tech Ubicomp</b> - Summer 2016
+                                </li>
+                                <li><i class="fa fa-caret-right"></i>
+                                    <b>Resident Assistant - Georgia Tech Housing</b> - Fall 2014-Summer 2015
+                                </li>
+                            </ul>
                         </div>
                     </div>
                 </div>
