--- a/index.html
+++ b/index.html
@@ -71,29 +71,33 @@
 
                 <div class="jumbotron">
                     <div class="row">
-                        <div class="col-md-6">
-                                <img src="static/alex256.jpg" height="453">
+                        <div class="col-xs-6">
+                            <img src="static/alex256.jpg" width="98%">
                         </div>
-                        <div class="col-md-6">
-                            <div class="col-xs-6">
-                                <a href="https://github.com/rushing3" class="thumbnail">
-                                    <img src="static/git.png" width="256">
-                                </a>
+                        <div class="col-xs-6">
+                            <div class="row">
+                                <div class="col-xs-6">
+                                    <a href="https://github.com/rushing3" class="thumbnail">
+                                        <img src="static/git.png" width="100%">
+                                    </a>
+                                </div>
+                                <div class="col-xs-6">
+                                    <a href="https://www.instagram.com/rush95/" class="thumbnail">
+                                        <img src="static/insta.png" width="100%">
+                                    </a>
+                                </div>
                             </div>
-                            <div class="col-md-6">
-                                <a href="https://www.instagram.com/rush95/" class="thumbnail">
-                                    <img src="static/insta.png" width="256">
-                                </a>
-                            </div>
-                            <div class="col-md-6">
-                                <a href="https://www.linkedin.com/in/alexander-rushing-97987184" class="thumbnail">
-                                    <img src="static/in.png" width="256">
-                                </a>
-                            </div>
-                            <div class="col-md-6">
-                                <a href="/resume" class="thumbnail">
-                                    <img src="static/resume.png" width="256">
-                                </a>
+                            <div class="row">
+                                <div class="col-xs-6">
+                                    <a href="https://www.linkedin.com/in/alexander-rushing-97987184" class="thumbnail">
+                                        <img src="static/in.png" width="100%">
+                                    </a>
+                                </div>
+                                <div class="col-xs-6">
+                                    <a href="/resume" class="thumbnail">
+                                        <img src="static/resume.png" width="100%">
+                                    </a>
+                                </div>
                             </div>
                         </div>
                     </div>
