--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <div class="jumbotron">
                     <div class="row">
                         <div class="col-xs-6">
-                            <img src="static/alex256.jpg" width="98%">
+                            <img src="static/alex256.jpg" width="97%">
                         </div>
                         <div class="col-xs-6">
                             <div class="row">
@@ -147,8 +147,8 @@
                             </p>
                         </div>
                         <div class="col-xs-6">
-                            <a href="https://rushing3.github.io/college_inspector/" class="thumbnail">
-                                <img src="static/college_inspector.png" height="256">
+                            <a href="https://rushing3.github.io/college_inspector/">
+                                <img src="static/college_inspector.png" width="100%">
                             </a>
                         </div>
                     </div>
@@ -176,8 +176,8 @@
                             </p>
                         </div>
                         <div class="col-xs-6">
-                            <a href="https://joint-travel.herokuapp.com/" class="thumbnail">
-                                <img src="static/joint.png" height="256">
+                            <a href="https://joint-travel.herokuapp.com/">
+                                <img src="static/joint.png" width="100%">
                             </a>
                         </div>
                     </div>
