Try using stored bootstrip

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <title>Alex Rushing - Website</title>
 
         <!-- Bootstrap -->
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+        <link rel="stylesheet" href="static/css/bootstrap.min.css">
 
         <!-- Font-Awesome -->
         <link href="static/css/font-awesome.min.css" rel="stylesheet">
@@ -147,7 +147,7 @@
                             </p>
                         </div>
                         <div class="col-xs-6">
-                            <a href="https://rushing3.github.io/college_inspector/">
+                            <a href="https://rushing3.github.io/college_inspector/" class="thumbnail">
                                 <img src="static/college_inspector.png" width="100%">
                             </a>
                         </div>
@@ -176,7 +176,7 @@
                             </p>
                         </div>
                         <div class="col-xs-6">
-                            <a href="https://joint-travel.herokuapp.com/">
+                            <a href="https://joint-travel.herokuapp.com/" class="thumbnail">
                                 <img src="static/joint.png" width="100%">
                             </a>
                         </div>
