--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <title>Alex Rushing - Website</title>
 
         <!-- Bootstrap -->
-        <link rel="stylesheet" href="static/css/bootstrap.min.css">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
         <!-- Font-Awesome -->
         <link href="static/css/font-awesome.min.css" rel="stylesheet">
