--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                                     </a>
                                 </div>
                                 <div class="col-xs-6">
-                                    <a href="/resume" class="thumbnail">
+                                    <a href="resume.pdf" target="_blank" class="thumbnail">
                                         <img src="static/resume.png" width="100%">
                                     </a>
                                 </div>
@@ -198,7 +198,7 @@
 
                 <div class="jumbotron">
                     <div class="row">
-                        <div class="col-xs-12">
+                        <div class="col-xs-11">
                             <h1>Education</h1>
 
                             <ul class="fa-ul">
@@ -213,6 +213,9 @@
                                 </li>
 
                             </ul>
+                        </div>
+                        <div class="col-xs-1">
+                            <a href="resume.pdf" target="_blank" class="thumbnail">View as PDF</a>
                         </div>
                     </div>
                     <hr>
