--- a/index.html
+++ b/index.html
@@ -77,30 +77,30 @@
                 <div class="jumbotron">
                     <div class="row">
                         <div class="col-xs-6">
-                            <img src="static/alex256.jpg" width="97%">
+                            <img src="static/img/alex256.jpg" width="97%">
                         </div>
                         <div class="col-xs-6">
                             <div class="row">
                                 <div class="col-xs-6">
                                     <a href="https://github.com/rushing3" class="thumbnail">
-                                        <img src="static/git.png" width="100%">
+                                        <img src="static/img/git.png" width="100%">
                                     </a>
                                 </div>
                                 <div class="col-xs-6">
                                     <a href="https://www.instagram.com/rush95/" class="thumbnail">
-                                        <img src="static/insta.png" width="100%">
+                                        <img src="static/img/insta.png" width="100%">
                                     </a>
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="col-xs-6">
                                     <a href="https://www.linkedin.com/in/alexander-rushing-97987184" class="thumbnail">
-                                        <img src="static/in.png" width="100%">
+                                        <img src="static/img/in.png" width="100%">
                                     </a>
                                 </div>
                                 <div class="col-xs-6">
-                                    <a href="resume.pdf" target="_blank" class="thumbnail">
-                                        <img src="static/resume.png" width="100%">
+                                    <a href="static/resume.pdf" target="_blank" class="thumbnail">
+                                        <img src="static/img/resume.png" width="100%">
                                     </a>
                                 </div>
                             </div>
@@ -153,7 +153,7 @@
                         </div>
                         <div class="col-xs-6">
                             <a href="https://rushing3.github.io/college_inspector/" class="thumbnail">
-                                <img src="static/college_inspector.png" width="100%">
+                                <img src="static/img/college_inspector.png" width="100%">
                             </a>
                         </div>
                     </div>
@@ -182,7 +182,7 @@
                         </div>
                         <div class="col-xs-6">
                             <a href="https://joint-travel.herokuapp.com/" class="thumbnail">
-                                <img src="static/joint.png" width="100%">
+                                <img src="static/img/joint.png" width="100%">
                             </a>
                         </div>
                     </div>
@@ -293,12 +293,9 @@
         <!-- Javascript -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <script src="static/js/jquery.easing.min.js"></script>
-        <script src="static/js/custom.js"></script>
         <script src="http://d3js.org/d3.v4.min.js"></script>
         <script src="https://unpkg.com/leaflet@1.2.0/dist/leaflet.js"></script>
-        <script src="./L.D3SvgOverlay.min.js"></script>
-        <script src="./d3-tip.js"></script>
-        <script src="./main.js"></script>
+        <script src="static/js/main.js"></script>
     </body>
 </html>
 
