View as pdf btn

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <a class="btn btn-menu btn-lg js-scroll-trigger" href="#travels">
                     Travels
                 </a>
-                <a class="btn btn-menu btn-lg js-scroll-trigger" href="#contact">
+                <a class="btn btn-menu btn-lg js-scroll-trigger" href="#">
                     Contact
                 </a>
             </div>
@@ -215,7 +215,7 @@
                             </ul>
                         </div>
                         <div class="col-xs-1">
-                            <a href="resume.pdf" target="_blank" class="thumbnail">View as PDF</a>
+                            <button href="resume.pdf" target="_blank" class="btn-green">View as PDF</button>
                         </div>
                     </div>
                     <hr>
