Update about me and contact me

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <a class="btn btn-menu btn-lg js-scroll-trigger" href="#travels">
                     Travels
                 </a>
-                <a class="btn btn-menu btn-lg js-scroll-trigger" href="#">
+                <a class="btn btn-menu btn-lg js-scroll-trigger" href="mailto:arushing95@gmail.com">
                     Contact
                 </a>
             </div>
@@ -109,15 +109,13 @@
                     <hr>
                     <p>
                     Hey there, my name is Alex and welcome to my site.
-                    I've recently graduated from Georgia Tech and will be
-                    starting at Amazon full-time as a Software Development
-                    Engineer after travelling for a couple months. Having grown
-                    up travelling around and in multiple continents, I have a
-                    nose for experiencing new places, cultures, and naturally
-                    food. I like to think this background gives me some unique
-                    insight and perspectives, but I digress. Whenever I can I
-                    love being outside, especially hiking and snowboarding, so
-                    Washington is a great place to be.
+                    I'm currently a Software Development Engineer at Amazon in Seattle, WA.
+                    I grew up travelling around and living in multiple continents, I have a
+                    nose for experiencing new places, cultures, and food.
+                    I like to think this background gives me some unique
+                    insight and perspectives. Whenever I can I
+                    love being outside, especially hiking and snowboarding in the backcountry, so
+                    Washington is a great place to be. Feel free to reach out and welcome to my site.
                     </p>
                 </div>
             </div>
@@ -225,6 +223,31 @@
 
                             <ul class="fa-ul">
                                 <li><i class="fa fa-caret-right"></i>
+                                    <b>Software Development Engineer - Amazon</b> - Seattle, WA - March 2018 to Present
+
+                                    <ul class="fa-ul" style="display: none;">
+                                        <li><i class="fa fa-angle-right"></i>
+                                            Designed and implemented push and email notification system for Prime Stylist,
+                                            serving over 100,000 customers and scalable to millions of customers world-wide.
+                                        </li>
+                                        <li><i class="fa fa-angle-right"></i>
+                                            Designed, implemented, and verified via A/B testing a styling request flow that
+                                            allowed customers to provide more details before submission.
+                                            This added tens of thousands of requests per day and increased recommended items
+                                            purchased by 12%
+                                        </li>
+                                        <li><i class="fa fa-angle-right"></i>
+                                            Re-built the way Amazon builds cold-stored behavioral data using Spark
+                                            and a whole new set of AWS services.
+                                            This reduced time to availability from 3 days down to a few hours,
+                                            while maintaining a 7ms average latency for over 1million TPS to
+                                            our service that vends behavioral data.
+                                        </li>
+                                    </ul>
+
+                                    <br>
+                                </li>
+                                <li><i class="fa fa-caret-right"></i>
                                     <b>Software Development Engineer Intern - Amazon</b> - Seattle, WA - Summer 2017
 
                                     <ul class="fa-ul" style="display: none;">
@@ -284,8 +307,8 @@
             <div class="row">
                 <div class="col-lg-12 mx-auto text-center">
                     <hr class="small">
-                    <h5>Georgia Tech &bull; Atlanta, GA</h5>
-                    <p class="text-muted">c/o 2017</p>
+                    <h5>Atlanta, GA &bull; Seattle, WA</h5>
+                    <p class="text-muted">2019</p>
                 </div>
             </div>
         </div>
