--- a/index.html
+++ b/index.html
@@ -213,7 +213,9 @@
                             </ul>
                         </div>
                         <div class="col-xs-1">
-                            <button href="resume.pdf" target="_blank" class="btn-green">View as PDF</button>
+                            <form action="static/resume.pdf">
+                                    <input type="submit" class="btn-green" value="View PDF" />
+                            </form>
                         </div>
                     </div>
                     <hr>
