--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
         <!-- Javascript -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <script src="static/js/jquery.easing.min.js"></script>
-        <script src="http://d3js.org/d3.v4.min.js"></script>
+        <script src="https://d3js.org/d3.v4.min.js"></script>
         <script src="https://unpkg.com/leaflet@1.2.0/dist/leaflet.js"></script>
         <script src="static/js/main.js"></script>
         <script src="static/js/bootstrap.min.js"></script>
